<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".DashboardActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <modularization.libraries.uicomponents.MagicalEditText
                android:id="@+id/edt_meeting"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:background="@drawable/dr_box"
                android:gravity="center"
                android:hint="@string/hint_enter_room_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textCursorDrawable="@drawable/black_cursor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.6" />

            <modularization.libraries.uicomponents.MagicalButton
                android:id="@+id/btn_submit"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/dr_clickable"
                android:gravity="center"
                android:text="@string/submit_default"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_meeting"
                app:layout_constraintWidth_percent="0.6" />

            <modularization.libraries.uicomponents.MagicalButton
                android:id="@+id/btn_submit_video_call"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/dr_clickable"
                android:gravity="center"
                android:text="@string/submit_video_call"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_submit"
                app:layout_constraintWidth_percent="0.6" />

            <modularization.libraries.uicomponents.MagicalButton
                android:id="@+id/btn_submit_voice_call"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/dr_clickable"
                android:gravity="center"
                android:text="@string/submit_voice_call"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_submit_video_call"
                app:layout_constraintWidth_percent="0.6" />

            <modularization.libraries.uicomponents.MagicalButton
                android:id="@+id/btn_submit_chat"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/dr_clickable"
                android:gravity="center"
                android:text="@string/submit_chat"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_submit_voice_call"
                app:layout_constraintWidth_percent="0.6" />

            <modularization.libraries.uicomponents.MagicalButton
                android:id="@+id/btn_settings"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/dr_clickable"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_submit_chat"
                app:layout_constraintWidth_percent="0.6" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>